# ruo

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_system.py  debug_news_fetch.py  docker-compose.yml  generate_comprehensive_report.py  generate_lhb_report.py  generate_report.py  main.py  opening_analysis_workflow.py  package-lock.json  pyproject.toml  report_export.py  requirements.txt  ruo.db  test_coach.py  test_result.json  test_result_summary.md  test_results_2025-12-11.md  tools.py  update_imports.py
backend/: .env.example  Dockerfile  celerybeat-schedule.db  import_concepts.py  init_database.py  main.py  migrate_kline.py  pyproject.toml  run.py  run_sync_manual.py
backend/app/: __init__.py  celery_config.py  main.py
backend/app/api/: __init__.py
backend/app/core/: circuit_breaker.py  config.py  data_converter.py  database.py  llm_factory.py  websocket_manager.py
backend/app/crawlers/: __init__.py  cls_crawler.py  xueqiu_crawler.py
backend/app/llm_agent/: __init__.py
backend/app/models/: __init__.py  alert.py  concept.py  kline.py  market_price.py  news.py  portfolio.py  prompt.py  stock.py  stock_favorite.py  stock_group.py  strategy.py  strategy_subscription.py  user.py
backend/app/services/: ai_analysis.py  alert.py  backtest.py  concept_monitor.py  daily_report.py  data_fetch.py  (+19 more)
backend/scripts/: batch_analyze_news.py  fetch_history_tushare.py  fill_history_gaps.py  init_db.sql  test_em.py
backend/tests/: __init__.py  ak_output.txt  conftest.py  find_xq_funcs.py  fix_db_column.py  quick_test.py  run_news_task.py  run_news_task_local.py  run_sync_market_price_local.py  run_sync_stocks_local.py  test_analysis.py  test_api.py  test_circuit_breaker.py  test_connectivity.py  test_integration.py  test_mvp.py  test_news_service.py  test_stock_tool.py  test_tushare_market_price.py  test_xq_price.py
(+263 files in other folders)
