[project]
name = "ruo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.26",
    "chainlit>=2.6.2",
    "dashscope>=1.24.0",
    "langchain-anthropic>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.1.0",
    "langgraph>=0.5.4",
    "openai>=1.0.0,<2.0.0",
    "pandas>=2.3.1",
    "parsel>=1.10.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.1",
]
