[project]
name = "ruo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.87",
    "dashscope>=1.25.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.3",
    "plotly>=6.5.0",
    "reportlab>=4.4.5",
    "streamlit>=1.51.0",
    "streamlit-option-menu>=0.4.0",
]
