[project]
name = "ruo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.21",
    "dashscope>=1.25.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.3",
    "plotly>=6.5.0",
    "reportlab>=4.4.5",
    "streamlit>=1.51.0",
    "streamlit-option-menu>=0.4.0",
    "uvicorn>=0.40.0",
    "fastapi>=0.115.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
